# cstor-dist

./: Cargo.toml  Dockerfile  Makefile  README.md  build-dependencies.txt  dependencies.txt
.github/workflows/: build.yml
src/: main.rs
